[package]
name = "protocash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = "0.4.13"
tower-abci = "0.12.0"
cometbft = "=0.1.0-alpha.2"
bytes = "1.6.0"
tendermint = "0.34.0"
tower-service = "0.3.2"
clap = { version = "4.5.4", features = ["derive"] }
tokio = "1.37.0"
