[workspace]
members = [ "client", "node", "util" ]
resolver = "2"

[workspace.dependencies]
rand = "0.8.5"
tokio = "1.37.0"
tower = "0.4.13"
tower-abci = { git = "https://github.com/llGaetanll/tower-abci", branch = "main" }
cometbft = "=0.1.0-alpha.2"
cometbft-proto = "0.1.0-alpha.2"
bytes = "1.6.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

