[workspace]
members = [ "client", "node", "util" ]
resolver = "2"

[workspace.dependencies]
rand = "0.8.5"
bytes = "1.6.0"
tower = "0.4.13"
tokio = { version = "1.37.0", features = ["macros", "io-util", "net", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

prost = "0.12.4"
cometbft = "=0.1.0-alpha.2"
cometbft-proto = "0.1.0-alpha.2"
tower-abci = { git = "https://github.com/llGaetanll/tower-abci", branch = "main" }

ark-ff = "0.4.0"
ark-std = "0.4.0"
ark-snark = "0.4.0"
ark-groth16 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-ec = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-381 = { version = "0.4.0", features = ["r1cs"] }
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs", "commitment", "signature", "crh", "prf", "merkle_tree"] }
ark-relations = { version = "0.4.0", features = ["tracing-subscriber"] }
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
panic = "unwind"

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
