[package]
name = "protocash-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocash-util = { path = "../util" }
tower = "0.4.13"
tower-abci = { git = "https://github.com/llGaetanll/tower-abci", branch = "main" }
cometbft-proto = "0.1.0-alpha.2"
cometbft = "=0.1.0-alpha.2"
bytes = "1.6.0"
tokio = "1.37.0"
prost = "0.12.4"

ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false  }

ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }

ark-serialize = { version = "^0.3.0", default-features = false }

ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }
