[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }

prost = { workspace = true }
tokio = { workspace = true }
cometbft-proto = { workspace = true }
bytes = { workspace = true }
