[package]
name = "protocash-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocash-util = { path = "../util" }
tower = "0.4.13"
tower-abci = { git = "https://github.com/llGaetanll/tower-abci", branch = "main" }
cometbft = "=0.1.0-alpha.2"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = "1.37.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
sha2 = "0.10.8"
rand = "0.8.5"
