[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }

clap = { version = "4.5.4", features = ["derive"] }
sha2 = "0.10.8"

rand = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-abci = { workspace = true }
cometbft-proto = { workspace = true }
cometbft = { workspace = true }
bytes = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
