[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-snark = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-serialize = { workspace = true }

[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

ark-groth16 = { workspace = true }
